[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cave-Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/menu_section_9patch.png" type="Texture" id=2]
[ext_resource path="res://TextConversations/NPC_textbox_2.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "TextDisplay"
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "PressZ"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="NPC_textbox_2" type="Node"]
script = ExtResource( 3 )

[node name="Dialog_Box" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_NinePatchRect" type="NinePatchRect" parent="Dialog_Box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -52.0
margin_right = 248.0
margin_bottom = 52.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Dialog_Box/Body_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 36.0
margin_right = -16.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/MarginContainer"]
margin_right = 456.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Fuck you beaner"

[node name="Body_Animation_Player" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label"]
anims/TextDisplay = SubResource( 2 )

[node name="Speaker_NinePatchRect" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
margin_left = -40.0
margin_top = -16.0
margin_right = 160.0
margin_bottom = 16.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speaker_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/Speaker_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Speaker Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBar_NinePatchRect" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -20.0
margin_right = 8.0
margin_bottom = 16.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBar_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/SpaceBar_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Press Z"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/SpaceBar_NinePatchRect"]
autoplay = "PressZ"
anims/PressZ = SubResource( 5 )
[connection signal="animation_finished" from="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label/Body_Animation_Player" to="." method="_on_AnimationPlayer_animation_finished"]
